[package]
name = "stomp-client"
version = "0.1.0"
authors = ["Toby Grasl <herblet@knowledge42.com>"]
edition = "2018"
description = "A crate providing a client-side implementation of the STOMP 1.2 protocol."
homepage = "https://github.com/herblet/stomp"
license = "MIT"
repository = "https://github.com/herblet/little-stomper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "^0.3", default-features = false, features = ["alloc"] }
stomp-parser = { version = "^0.5", git = "https://github.com/herblet/stomp-parser", branch="main"}

[dev-dependencies]
tokio = { version = "1", features = ["rt","macros", "sync"] }
tokio-stream = "0.1"
stomp-test-utils = {version = "0.2", path="../stomp-test-utils" }
sender-sink = "0.2"
